UI: Fix source comment badge alignment

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -1769,6 +1769,7 @@ a.language:hover {
 }
 .source-comment {
   font-weight: normal;
+  vertical-align: top;
 }
 .unit-state-cell {
   width: 6px;
